--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
   "description": "El bot oficial del Dreamiverso",
   "license": "MIT",
   "scripts": {
-    "dev": "tsnd --respawn --quiet src/index.ts",
+    "dev": "cross-env NODE_ENV=development tsnd --respawn --quiet src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "cross-env NODE_ENV=production node ."
   },
   "dependencies": {
-    "discord.js": "^13.10.1"
+    "discord.js": "^13.10.1",
+    "zod": "^3.18.0"
   },
   "devDependencies": {
     "@types/node": "^18.6.5",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.1",
     "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
