feat: adds basic command registration

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "start": "cross-env NODE_ENV=production node ."
   },
   "dependencies": {
+    "@discordjs/rest": "^1.0.1",
+    "discord-api-types": "^0.37.1",
     "discord.js": "^13.10.1",
     "zod": "^3.18.0"
   },
