--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "discord.js": "^14.2.0",
+    "happy-dom": "^6.0.4",
     "zod": "^3.18.0"
   },
   "devDependencies": {
@@ -30,6 +31,6 @@
     "typescript": "^4.7.4"
   },
   "engines": {
-    "node": ">=16.9.0"
+    "node": ">=18.0"
   }
 }
