--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   "dependencies": {
     "discord.js": "^14.2.0",
     "happy-dom": "^6.0.4",
+    "node-cron": "^3.0.0",
     "zod": "^3.18.0"
   },
   "devDependencies": {
     "@types/node": "^18.7.1",
+    "@types/node-cron": "^3.0.2",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "cross-env": "^7.0.3",
