--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsnd -r tsconfig-paths/register --respawn --quiet src/index.ts",
-    "build": "tsc",
+    "build:db": "prisma generate",
+    "build:ts": "tsc",
+    "build": "yarn run-p build:*",
     "start": "cross-env NODE_ENV=production node ."
   },
   "dependencies": {
+    "@prisma/client": "^4.2.1",
     "discord.js": "^14.2.0",
     "happy-dom": "^6.0.4",
     "node-cron": "^3.0.0",
+    "prisma": "^4.2.1",
     "zod": "^3.18.0"
   },
   "devDependencies": {
@@ -28,6 +32,7 @@
     "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.1.0",
@@ -35,5 +40,8 @@
   },
   "engines": {
     "node": ">=18.0"
+  },
+  "prisma": {
+    "schema": "src/db/schema.prisma"
   }
 }
