--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "description": "El bot oficial del Dreamiverso",
   "license": "MIT",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development tsnd -r tsconfig-paths/register --respawn --quiet src/index.ts",
+    "dev": "cross-env NODE_ENV=development tsx watch src/index.ts",
     "build:db": "prisma generate",
     "build:ts": "tsc",
     "build": "yarn run-p build:*",
@@ -34,8 +34,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
-    "ts-node-dev": "^2.0.0",
-    "tsconfig-paths": "^4.1.0",
+    "tsx": "^3.8.2",
     "typescript": "^4.7.4"
   },
   "engines": {
