--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.2.1",
+    "common-tags": "^1.8.2",
     "discord.js": "^14.2.0",
     "happy-dom": "^6.0.4",
     "node-cron": "^3.0.0",
@@ -22,6 +23,7 @@
     "zod": "^3.18.0"
   },
   "devDependencies": {
+    "@types/common-tags": "^1.8.1",
     "@types/node": "^18.7.1",
     "@types/node-cron": "^3.0.2",
     "@types/uuid": "^8.3.4",
