--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^4.2.1",
     "common-tags": "^1.8.2",
     "discord.js": "^14.2.0",
+    "fast-glob": "^3.2.11",
     "happy-dom": "^6.0.4",
     "node-cron": "^3.0.0",
     "prisma": "^4.2.1",
@@ -26,7 +27,6 @@
     "@types/common-tags": "^1.8.1",
     "@types/node": "^18.7.1",
     "@types/node-cron": "^3.0.2",
-    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "cross-env": "^7.0.3",
@@ -40,7 +40,7 @@
     "typescript": "^4.7.4"
   },
   "engines": {
-    "node": ">=18.0"
+    "node": ">=18.x"
   },
   "prisma": {
     "schema": "src/db/schema.prisma"
