--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "common-tags": "^1.8.2",
     "discord.js": "^14.3.0",
     "fast-glob": "^3.2.12",
+    "got": "^12.5.1",
     "happy-dom": "^6.0.4",
     "node-cron": "^3.0.2",
     "prisma": "^4.3.1",
@@ -48,7 +49,7 @@
     "typescript": "^4.8.3"
   },
   "engines": {
-    "node": "18.x"
+    "node": ">=16.x"
   },
   "prisma": {
     "schema": "src/db/schema.prisma"
