--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@prisma/client": "^4.3.1",
     "common-tags": "^1.8.2",
+    "dayjs": "^1.11.5",
     "discord.js": "^14.3.0",
     "fast-glob": "^3.2.12",
     "got": "^12.5.1",
