chore: lint script should error

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx watch src/index.ts",
     "sync": "cross-env NODE_ENV=development tsx src/scripts/sync.ts",
-    "lint": "eslint --fix",
+    "lint": "eslint src --max-warnings=0",
     "build:db": "prisma generate",
     "build:ts": "tsc",
     "build": "yarn run-p build:*",
