--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fast-glob": "^3.2.12",
     "got": "^12.5.2",
     "happy-dom": "^7.6.6",
+    "html-entities": "^2.3.3",
     "node-cron": "^3.0.2",
     "prisma": "^4.5.0",
     "srcset": "^5.0.0",
